--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 osx_image: xcode7.3
 language: objective-c
 xcode_project: FCCarouselView.xcworkspace
-script: xcodebuild -project FCCarouselView.xcworkspace -scheme "FCCarouselView" -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 6,OS=latest'
+script: xcodebuild -workspace FCCarouselView.xcworkspace -scheme "FCCarouselView" -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 6,OS=latest'
